--- a/src/edu/ufp/sd/boulderdash/client/BoulderDashClientUserGUI.form
+++ b/src/edu/ufp/sd/boulderdash/client/BoulderDashClientUserGUI.form
@@ -93,8 +93,14 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jtfUsername">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="tiago"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jtfPassword">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="12345"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
